Fix thumbnail to cover whitespace on smaller screens

--- a/themes/codi-ng/static/css/style.css
+++ b/themes/codi-ng/static/css/style.css
@@ -2,6 +2,10 @@ body {
   padding: 0
 }
 
+#nav-border {
+  margin-bottom: 1rem;
+}
+
 .author {
   border: 1px solid gray;
   border-style: dotted;
